# sendbooster_agv_bringup

./: CMakeLists.txt  README.md  USAGE.md  frames_2026-02-25_16.43.28.gv  frames_2026-03-10_17.46.07.gv  package.xml  start_backend.sh  test.md
backend/ros2_bridge/: node.py
config/: cartographer_1lidar.lua  cartographer_2lidar.lua  cartographer_base.lua  cyclonedds.xml  cyclonedds_network.xml  ekf.yaml  fastdds_udp.xml  keepout_filter.yaml  motor_params.yaml  nav2_params.yaml  nav2_params_mppi.yaml  nav2_params_mppi_tuned.yaml  nav2_params_odom.yaml
docker/: Dockerfile  docker-compose.yml  run_jetson_test.sh
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Map/: MapCanvas.tsx
frontend/src/hooks/: useKeyboardControl.ts  useWebSocket.ts
include/sendbooster_agv_bringup/: motor_driver.hpp
launch/: bringup.launch.py  bringup_encoder.launch.py  cartographer.launch.py  navigation2.launch.py  rviz_view.launch.py  sim_odom_test.launch.py  simulation.launch.py  simulation_mppi.launch.py  stress_test.launch.py
map/: default.yaml  harsh_corridors.pgm  harsh_corridors.yaml  keepout.pgm  keepout.yaml  keepout_mask.yaml  map.pgm  map.yaml  my_map.pgm  my_map.yaml  real_map_sim.pgm  real_map_sim.yaml  warehouse_sim.pgm  warehouse_sim.yaml
maps/: map.pgm  map.yaml
models/: real_map_walls.stl
models/map_walls/: model.config  model.sdf
models/map_walls/meshes/: map_walls.stl
rviz/: nav2_default_view.rviz  nav2_view.rviz  nav_sim.rviz  slam_view.rviz
scripts/: activate_nav2.sh  auto_tune_test.sh  detect_baudrate.py  mppi_auto_tuner.py  nav2_waypoint_test.py  nav_goal_metrics_collector.py  odom_imu_fuser_real.py  odom_path_publisher.py  pgm_to_gazebo_stl.py  record_navigation.sh  run_test_with_bag.sh  scan_angle_filter.py  topic_delay_relay.py
src/: laser_scan_merger.cpp  motor_driver.cpp  motor_driver_node.cpp  scan_processor.cpp
urdf/: sendbooster_agv.urdf  sendbooster_agv_gazebo.urdf  sendbooster_agv_gazebo_stress.urdf
worlds/: factory_maze.world  harsh_corridors.world  map_world.world  real_map.world  real_map_harsh.world  warehouse.world
