<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sendbooster_agv_bringup</name>
  <version>0.0.1</version>
  <description>Sendbooster AGV motor driver and bringup package for MDROBOT MD400T</description>
  <maintainer email="roboticsmaster@naver.com">seongmin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>serial</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>stella_ahrs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sendbooster_agv_simulation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
